# pretix-emailVerification-hscoburg

./: Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: docker-build.yml
pretix-emailChecker/: .update-locales.sh  conftest.py  pretixplugin.toml  pytest.ini
pretix-emailChecker/pretix_emailChecker/: signals.py
pretix_emailChecker/: apps.py
pretix_emailChecker/locale/de/LC_MESSAGES/: django.po
